# nanogpt-rs

./: Cargo.toml  README.md
src/: bigram.rs  dataset.rs  main.rs  ops.rs
