[package]
name = "nanogpt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
burn = { version = "0.16.1", features = ["train", "wgpu"] }
rand = "0.9.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
